wrote swagger docs for contentAPI
